# inbox-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODOS.md
.github/workflows/: ci.yml
docs/research/: inbox-by-google-complete-reference.md
docs/superpowers/notes/: 2026-04-07-lettre-api-verification.md  2026-04-08-keyring-oauth2-verification.md
docs/superpowers/plans/: 2026-03-14-m01-workspace-core-types.md  2026-03-14-m02-config-system.md  2026-03-14-m03-sqlite-store-api.md  2026-03-14-m04-maildir-operations.md  2026-03-14-m05-tantivy-index.md  2026-03-14-m06-imap-connection-auth.md  2026-03-14-m07-initial-sync-phase1.md  2026-03-14-m08-initial-sync-phase2.md  2026-03-14-m09-incremental-sync-idle.md  2026-03-14-m10-threading-algorithm.md  2026-03-14-m11-contacts-avatars.md  2026-03-14-m12-bundler-heuristics.md  2026-03-14-m13-bundler-rules-learning.md  2026-03-14-m14-bundle-throttling.md  2026-03-14-m15-iced-shell-nav.md  2026-03-14-m16-theme-system.md  2026-03-14-m17-inbox-feed-rows.md  2026-03-14-m18-bundle-rows.md  2026-03-14-m19-done-pin-sweep.md  2026-03-14-m20-swipe-hover.md  2026-03-14-m21-snooze-picker.md  2026-03-14-m22-reminders-fab.md  2026-03-14-m23-compose-smtp.md  2026-03-14-m24-search-query.md  2026-03-14-m25-highlights-polish.md  2026-03-14-m26-popup-menu-widget.md  2026-03-14-m27-overflow-context-menus.md  2026-03-14-m28-account-switcher.md  2026-03-14-m29-settings-general-accounts.md  2026-03-14-m30-settings-bundles-shortcuts.md  2026-04-06-m31-store-traits-action-execution.md  2026-04-06-m33-inbox-feed-widgets.md  2026-04-06-m34-thread-detail-view.md  roadmap.md
docs/superpowers/specs/: 2026-03-14-inboxly-design.md  2026-03-14-qol-menus-settings-design.md  2026-04-06-inboxly-v2-full-client-design.md
inboxly/: Cargo.toml
inboxly-bundler/: Cargo.toml
inboxly-bundler/src/: affinity.rs  custom_bundle.rs  default_rules.toml  engine.rs  evaluator.rs  events.rs  heuristics.rs  lib.rs  recategorise.rs  rule_store.rs  rules_toml.rs  scheduler.rs  system_bundles.rs  test_utils.rs  user_rules.rs
inboxly-bundler/tests/: integration.rs  integration_pipeline.rs  throttle_integration.rs
inboxly-core/: Cargo.toml
inboxly-core/src/: attachment.rs  bundle.rs  config.rs  contact.rs  email.rs  error.rs  flags.rs  highlight.rs  id.rs  inbox.rs  lib.rs  markdown.rs  offline.rs  reply.rs  secrets.rs  thread.rs  throttle.rs  traits.rs
inboxly-core/src/store_traits/: affinity_store.rs  bundle_store.rs  mod.rs  rule_store.rs
inboxly-core/tests/: all_types.rs
inboxly-extract/: Cargo.toml
inboxly-extract/src/: lib.rs
inboxly-imap/: Cargo.toml
inboxly-imap/src/: append.rs  body_fetch.rs  body_processor.rs  channel.rs  connection.rs  error.rs  folders.rs  idle.rs  incremental.rs  lib.rs  offline_replay.rs  on_demand.rs  phase2.rs  pool.rs  sync_loop.rs  sync_manager.rs  tls.rs
inboxly-imap/src/auth/: mod.rs  oauth2.rs  password.rs  shared_oauth2.rs  xoauth2.rs
inboxly-imap/src/smtp/: draft_sender.rs  error.rs  message_builder.rs  mod.rs  redact.rs  retry.rs  transport.rs
inboxly-imap/src/sync/: batch.rs  engine.rs  envelope.rs  error.rs  mod.rs  progress.rs  store.rs  threading.rs  uid_state.rs
inboxly-imap/tests/: auth_password_test.rs  auth_xoauth2_test.rs  channel_test.rs  connection_test.rs  folders_test.rs  integration_test.rs  oauth2_test.rs  pool_test.rs  sync_batch_test.rs  sync_dedup.rs  sync_engine_test.rs  sync_envelope_test.rs  sync_store_test.rs  sync_threading_test.rs  sync_uid_state_test.rs  tls_test.rs
inboxly-imap/tests/fixtures/: mod.rs
inboxly-snooze/: Cargo.toml
inboxly-snooze/src/: lib.rs
inboxly-store/: Cargo.toml
inboxly-store/src/: accounts.rs  bundle_query.rs  bundle_rules.rs  bundles.rs  contacts.rs  draft_attachments.rs  drafts.rs  emails.rs  error.rs  forward_attachments.rs  highlights.rs  inbox_query.rs  lib.rs  maildir_store.rs  migrations.rs  offline_queue.rs  reminders.rs  sender_affinity.rs  settings.rs  store.rs  sync_state.rs  thread_reader.rs  thread_state.rs  threads.rs  throttle.rs
inboxly-store/src/search/: mod.rs  query.rs  rebuild.rs  schema.rs  scoring.rs
inboxly-store/src/threading/: assign.rs  batch.rs  edge_case_tests.rs  headers.rs  metadata.rs  mod.rs  rebuild.rs  unify.rs
inboxly-store/src/trait_impls/: affinity_store_impl.rs  bundle_store_impl.rs  mod.rs  rule_store_impl.rs
inboxly-store/tests/: action_enqueue.rs  affinity_store_trait.rs  bundle_store_trait.rs  contact_integration.rs  drafts.rs  integration.rs  maildir_integration.rs  rule_store_trait.rs  search_index.rs  thread_reader.rs  threading_integration.rs
inboxly-store/tests/fixtures/: multipart.eml  reply_in_thread.eml  simple.eml  with_attachment.eml
inboxly-ui/: Cargo.toml
inboxly-ui/assets/: main.css
inboxly-ui/src/: app.rs  feed.rs  keyboard.rs  lib.rs  loaded_thread.rs  markdown_preview.rs  nav.rs  sanitize.rs  startup.rs  theme.rs  toolbar.rs  undo.rs
inboxly-ui/src/components/: app.rs  bundle_row.rs  compose_view.rs  content_area.rs  context_menu.rs  email_row.rs  empty_state.rs  inbox_feed.rs  inbox_zero.rs  menu_actions.rs  mod.rs  nav_drawer.rs  overflow_menu.rs  section_header.rs  snooze_picker.rs  speed_dial_fab.rs  thread_detail_view.rs  thread_message.rs  toolbar.rs  undo_snackbar.rs
inboxly-ui/src/state/: compose_state.rs  menu_state.rs  mod.rs  settings_state.rs  snooze_state.rs
inboxly-ui/src/theme/: avatar_colors.rs  bundle_colors.rs  color_type.rs  colors.rs  dimensions.rs  mod.rs  system.rs  typography.rs
inboxly-ui/src/views/: compose_view.rs  inbox_view.rs  mod.rs  search_view.rs  settings_bundles.rs  settings_notifications.rs  settings_shortcuts.rs  settings_view.rs
inboxly-ui/src/widgets/: avatar.rs  bundle_icon.rs  bundle_row.rs  email_row.rs  empty_state.rs  hover_actions.rs  inbox_zero.rs  mod.rs  overflow_menu.rs  popup_menu.rs  reminder_row.rs  right_click_area.rs  section_header.rs  snooze_picker.rs  speed_dial_fab.rs  swipe_state.rs  undo_snackbar.rs
inboxly/src/: main.rs
