[workspace]
members = [
    "inboxly",
    "inboxly-core",
    "inboxly-imap",
    "inboxly-store",
    "inboxly-bundler",
    "inboxly-snooze",
    "inboxly-extract",
    "inboxly-ui",
]
resolver = "2"

[workspace.package]
version = "0.35.1"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://codeberg.org/alan090/inbox-rust"

[workspace.dependencies]
# Shared across crates — centralized versions
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tokio = { version = "1", features = ["full"] }
dioxus = { version = "0.7", features = ["desktop"] }
ammonia = "4"
keyring = { version = "3", default-features = false, features = ["linux-native-sync-persistent"] }
open = "5"
url = "2"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "tracing"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
unicode-normalization = "0.1"

# Internal crates
inboxly-core = { path = "inboxly-core" }
inboxly-imap = { path = "inboxly-imap" }
inboxly-store = { path = "inboxly-store" }
inboxly-bundler = { path = "inboxly-bundler" }
inboxly-snooze = { path = "inboxly-snooze" }
inboxly-extract = { path = "inboxly-extract" }
inboxly-ui = { path = "inboxly-ui" }
