[package]
name = "inboxly-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-helpers = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
toml = "0.8"
dirs = "6"
regex = "1"
pulldown-cmark.workspace = true
keyring.workspace = true
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
