[package]
name = "inboxly-imap"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inboxly-core = { path = "../inboxly-core" }
inboxly-store = { path = "../inboxly-store" }
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
ring = "0.17"
webpki-roots = "1"
rustls-pki-types = "1"
oauth2 = "5"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
open = "5"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
url = "2"
serde = { version = "1", features = ["derive"] }
rand = "0.9"
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
mailparse = "0.15"
tokio-util = { version = "0.7", features = ["rt"] }
serde_json = "1"
lettre.workspace = true
sha2 = "0.10"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
