[package]
name = "inboxly-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inboxly-core = { path = "../inboxly-core" }
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
mailparse = "0.15"
maildir = "0.6"
tantivy = "0.22"

[dev-dependencies]
tempfile = "3"
