[package]
name = "inboxly-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inboxly-core.workspace = true
inboxly-imap.workspace = true
inboxly-store.workspace = true
inboxly-bundler.workspace = true
inboxly-snooze.workspace = true
inboxly-extract.workspace = true
iced.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = "0.1"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
