[package]
name = "inboxly"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "inboxly"
path = "src/main.rs"

[dependencies]
dioxus.workspace = true
inboxly-bundler.workspace = true
inboxly-core.workspace = true
inboxly-store.workspace = true
inboxly-ui.workspace = true
tokio.workspace = true
